# CognitiveModeling

./: Hw1Problem7.py  README.md
ClassCode/: pyproject.toml
HW01/: P9.py  pyproject.toml
HW01/hw01/: P5.py  P8.py  P9.py  environment.yml
HW01/tests/: test_hw01.py
HW02/: diffusion_model.stan  pyproject.toml  q2.py  q3.py  q5.py  q6.ipynb  q6.py  q7.ipynb
