[tool.poetry]
name = "HW01"
version = "0.1.0"
description = ""
authors = ["Jonathan Kloepfer <kloepj@rpi.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
seaborn = "^0.13.2"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
